Retry testcases fix

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -36,9 +36,14 @@
       </section>
 
       <section id="table-container" class="hidden">
-        <h2>Testcases progress</h2>
         <div class="d-flex justify-content-between align-items-center pt-2 pb-2">
-          <div><b>Testcases Count: 10/100</b></div>
+          <h2>
+            Testcases progress
+          </h2>
+          <button class="btn btn-primary" id="restartBtn">Restart</button>
+        </div>
+        <div class="d-flex justify-content-between align-items-center pt-2 pb-2">
+          <!-- <div><b>Testcases Count: 10/100</b></div> -->
         </div>
         <div class="card">
           <div class="t-c">
