--- a/server/public/transaction.html
+++ b/server/public/transaction.html
@@ -16,7 +16,7 @@
         </a>
       </nav>
     </header>
-    <div class="container">
+    <div class="container-fluid">
       <section id="table-container">
         <div class="d-flex justify-content-between align-items-center pt-2 pb-2">
           <h2>
@@ -35,6 +35,7 @@
                   <th scope="col">Id</th>
                   <th scope="col">From</th>
                   <th scope="col">To</th>
+                  <th scope="col">Amount</th>
                   <th scope="col">Status</th>
                   <th scope="col">Hash</th>
                 </tr>
