Transaction stats , transaction test duration

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -54,10 +54,6 @@
               <span><b>Initiated:</b> 0</span>
               <span><b>Pending:</b> 0</span>
             </div>
-            <!-- <div>
-              <span><b>Transactions.:</b> 0</span>
-              <span><b>Failed:</b> 0</span>
-            </div> -->
           </div>
         </div>
         <div class="card">
@@ -68,6 +64,7 @@
                   <th scope="col">Id</th>
                   <th scope="col">Title</th>
                   <th scope="col">Success</th>
+                  <th scope="col">Duration(ms)</th>
                 </tr>
               </thead>
               <tbody>
