--- a/server/public/transaction.html
+++ b/server/public/transaction.html
@@ -27,6 +27,17 @@
         <div class="d-flex justify-content-between align-items-center pt-2 pb-2">
           <!-- <div><b>Testcases Count: 10/100</b></div> -->
         </div>
+        <div class="card border-primary">
+          <div class="card-header">Stats</div>
+          <div class="card-body pt-2 pb-2" id="stats">
+            <div class="d-flex justify-content-between align-items-center ">
+              <span><b>Completed:</b> 0</span>
+              <span><b>Failed:</b> 0</span>
+              <span><b>Initiated:</b> 0</span>
+              <span><b>Pending:</b> 0</span>
+            </div>
+          </div>
+        </div>
         <div class="card">
           <div class="t-c">
             <table class="table" id="table">
